--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "path": "^0.12.7",
     "socket.io": "^1.5.1"
   },
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
